[gd_scene load_steps=9 format=3 uid="uid://dxi10v0wjxctd"]

[ext_resource type="Script" path="res://Levels/chocolate_hurt.gd" id="1_53kdw"]
[ext_resource type="AudioStream" uid="uid://53acmjxpgiwl" path="res://Music/stream6.ogg" id="2_q1qnh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltwqv"]
size = Vector2(532, 53.5938)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjdh4"]
size = Vector2(532, 21.6953)

[sub_resource type="Animation" id="Animation_u3gta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SinkCollision:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rdfnr"]
resource_name = "test"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SinkCollision:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_so368"]
_data = {
"RESET": SubResource("Animation_u3gta"),
"test": SubResource("Animation_rdfnr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8heb5"]
size = Vector2(537, 16)

[node name="chocolate_hurt" type="AnimatableBody2D"]
position = Vector2(-3, 0)
script = ExtResource("1_53kdw")

[node name="SinkCollision" type="CollisionShape2D" parent="."]
position = Vector2(-16, 23.2031)
shape = SubResource("RectangleShape2D_ltwqv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-15, 6.15234)
shape = SubResource("RectangleShape2D_pjdh4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_so368")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_q1qnh")

[node name="killArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killArea"]
position = Vector2(-14.5, 22)
shape = SubResource("RectangleShape2D_8heb5")
debug_color = Color(0.541509, 0.12145, 0.08585, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="killArea" to="." method="_on_kill_area_body_entered"]
